# agent-authenticator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/agent_authenticator/: __init__.py  __main__.py  audit.py  server.py  vault.py
tests/: test_server.py  test_vault.py
